--- a/FinancialPlanning/FinancialPlanningAPI/appsettings.json
+++ b/FinancialPlanning/FinancialPlanningAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local);uid=sa;pwd=123123;database=FinancialPlanning;Trusted_Connection=True;TrustServerCertificate=True;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
