--- a/FinancialPlanning/FinancialPlanningAPI/FinancialPlanningAPI.csproj
+++ b/FinancialPlanning/FinancialPlanningAPI/FinancialPlanningAPI.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FinancialPlanningBAL\FinancialPlanningBAL.csproj" />
     <ProjectReference Include="..\FinancialPlanningDAL\FinancialPlanningDAL.csproj" />
   </ItemGroup>
 
