--- a/FinancialPlanning/FinancialPlanningAPI/appsettings.json
+++ b/FinancialPlanning/FinancialPlanningAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);uid=sa;pwd=123123;database=FinancialPlanning;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(local);uid=sa;pwd=ska;database=FinancialPlanning;Trusted_Connection=True;TrustServerCertificate=True;"
 
   },
   "Logging": {
