--- a/FinancialPlanning/FinancialPlanningAPI/appsettings.json
+++ b/FinancialPlanning/FinancialPlanningAPI/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "User",
+    "ValidIssuer": "https://localhost:7270",
+    "Secret": "ThisIsASecretKeyThatYouWillNeverKnow!2#4%6&8(0"
+  }
 }
