update email handler

--- a/FinancialPlanning/FinancialPlanningAPI/appsettings.json
+++ b/FinancialPlanning/FinancialPlanningAPI/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailSettings" : {
+    "Host" : "smtp.gmail.com",
+    "Email": "financialplanapp@gmail.com",
+    "Password": "yhdf ctwu kqtz equy"
+  },
   "AllowedHosts": "*"
 }
