--- a/FinancialPlanning/FinancialPlanningAPI/FinancialPlanningAPI.csproj
+++ b/FinancialPlanning/FinancialPlanningAPI/FinancialPlanningAPI.csproj
@@ -18,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
