--- a/FinancialPlanning/FinancialPlanningAPI/appsettings.json
+++ b/FinancialPlanning/FinancialPlanningAPI/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(local);uid=sa;pwd=123123;database=FinancialPlanning1;Trusted_Connection=True;TrustServerCertificate=True;"
-
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "AccessKey": "AKIAW3MEBMWBODMFHXMF",
+    "SecretKey": "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",
+    "Region": "ap-southeast-1",
+    "BucketName": "financial-planning-pjb"
+  }
 }
