Rename solution and project

--- a/FinancialPlanning/FinancialPlanning.Service/FinancialPlanning.Service.csproj
+++ b/FinancialPlanning/FinancialPlanning.Service/FinancialPlanning.Service.csproj
@@ -7,6 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FinancialPlanningDAL\FinancialPlanningDAL.csproj" />
+    <ProjectReference Include="..\FinancialPlanning.Data\FinancialPlanning.Data.csproj" />
   </ItemGroup>
 </Project>
