--- a/FinancialPlanningBE/FinancialPlanning.Service/FinancialPlanning.Service.csproj
+++ b/FinancialPlanningBE/FinancialPlanning.Service/FinancialPlanning.Service.csproj
@@ -12,7 +12,6 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.7.305.30" />
-    <PackageReference Include="ExcelDataReader" Version="3.6.0" />
-    <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
+    <PackageReference Include="EPPlus" Version="7.0.9" />
   </ItemGroup>
 </Project>
