--- a/FinancialPlanning/FinancialPlanningAPI/FinancialPlanning.WebAPI.csproj
+++ b/FinancialPlanning/FinancialPlanningAPI/FinancialPlanning.WebAPI.csproj
@@ -29,8 +29,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FinancialPlanningBAL\FinancialPlanningBAL.csproj" />
-    <ProjectReference Include="..\FinancialPlanningDAL\FinancialPlanningDAL.csproj" />
+    <ProjectReference Include="..\FinancialPlanningBAL\FinancialPlanning.Service.csproj" />
+    <ProjectReference Include="..\FinancialPlanningDAL\FinancialPlanning.Data.csproj" />
   </ItemGroup>
 
 </Project>
