--- a/FinancialPlaningUI/FinancialPlaning/angular.json
+++ b/FinancialPlaningUI/FinancialPlaning/angular.json
@@ -25,7 +25,8 @@
               "src/assets"
             ],
             "styles": [           
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css"
             ],
             
