do display list reports in api

--- a/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.json
+++ b/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.json
@@ -22,7 +22,7 @@
   },
   "JWT": {
     "ValidAudience": "User",
-    "ValidIssuer": "https://localhost:7270",
+    "ValidIssuer": "http://localhost:5085",
     "Secret": "ThisIsASecretKeyThatYouWillNeverKnow!2#4%6&8(0"
   }
 }
