--- a/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.json
+++ b/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);uid=sa;pwd=123123;database=FinancialPlanning;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-8D3LMBI\\SQLEXPRESS;database=FinancialPlanning;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
