--- a/FinancialPlanningBE/Test/Test.csproj
+++ b/FinancialPlanningBE/Test/Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -26,5 +26,9 @@
   <ItemGroup>
     <ProjectReference Include="..\FinancialPlanning.Service\FinancialPlanning.Service.csproj" />
     <ProjectReference Include="..\FinancialPlanning.Data\FinancialPlanning.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="UnitTesting\Controller\" />
   </ItemGroup>
 </Project>
