--- a/FinancialPlanningBE/FinancialPlanning.WebAPI/FinancialPlanning.WebAPI.csproj
+++ b/FinancialPlanningBE/FinancialPlanning.WebAPI/FinancialPlanning.WebAPI.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Models\NewFolder\" />
   </ItemGroup>
 
   <ItemGroup>
