--- a/FinancialPlanningBE/FinancialPlanning.Service/FinancialPlanning.Service.csproj
+++ b/FinancialPlanningBE/FinancialPlanning.Service/FinancialPlanning.Service.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.305.30" />
     <PackageReference Include="EPPlus" Version="7.0.9" />
+    <PackageReference Include="Aspose.Cells" Version="24.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FinancialPlanning.Data\FinancialPlanning.Data.csproj" />
