--- a/FinancialPlaningUI/FinancialPlaning/package.json
+++ b/FinancialPlaningUI/FinancialPlaning/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^17.1.0",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
