Fix static bugs, hard-code

--- a/FinancialPlanningBE/FinancialPlanning.Data/FinancialPlanning.Data.csproj
+++ b/FinancialPlanningBE/FinancialPlanning.Data/FinancialPlanning.Data.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="MimeKit" Version="4.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FinancialPlanning.Common\FinancialPlanning.Common.csproj" />
+  </ItemGroup>
+
 </Project>
