--- a/FinancialPlanningBE/FinancialPlanning.Service/FinancialPlanning.Service.csproj
+++ b/FinancialPlanningBE/FinancialPlanning.Service/FinancialPlanning.Service.csproj
@@ -19,6 +19,8 @@
     <PackageReference Include="AWSSDK.S3" Version="3.7.305.30" />
     <PackageReference Include="EPPlus" Version="7.0.9" />
     <PackageReference Include="Aspose.Cells" Version="24.3.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FinancialPlanning.Data\FinancialPlanning.Data.csproj" />
