--- a/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.json
+++ b/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.json
@@ -9,8 +9,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "EmailSettings" : {
-    "Host" : "smtp.gmail.com",
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
     "Email": "financialplanapp@gmail.com",
     "Password": "yhdf ctwu kqtz equy"
   },
@@ -25,5 +25,30 @@
     "ValidAudience": "User",
     "ValidIssuer": "https://localhost:5085",
     "Secret": "ThisIsASecretKeyThatYouWillNeverKnow!2#4%6&8(0"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log-.txt",
+          "rollOnFileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter,Serilog.Formatting.Compact",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+   
   }
 }
