--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ Desktop.ini
 .DS_Store
 .fake
 .vscode/
-FinancialPlanningBE/FinancialPlanning.WebAPI/logs/log-20240403.txt
+FinancialPlanningBE/FinancialPlanning.WebAPI/
+.logs/
