update email password

--- a/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.json
+++ b/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.json
@@ -12,7 +12,7 @@
   "EmailSettings": {
     "Host": "smtp.gmail.com",
     "Email": "financialplanapp@gmail.com",
-    "Password": "yhdf ctwu kqtz equy"
+    "Password": "pxep ywvx ncux klhd"
   },
   "AllowedHosts": "*",
   "AWS": {
