--- a/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.Development.json
+++ b/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SalesDb": "Server=localhost;Database=SalesDb;User Id=SA;Password=A&VeryComplex123Password;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
