--- a/FinancialPlanningBE/FinancialPlanning.WebAPI/Properties/launchSettings.json
+++ b/FinancialPlanningBE/FinancialPlanning.WebAPI/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5085",
+      "applicationUrl": "https://localhost:5086",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
