--- a/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.json
+++ b/FinancialPlanningBE/FinancialPlanning.WebAPI/appsettings.json
@@ -7,8 +7,8 @@
   },
   "EmailSettings": {
     "Host": "smtp.gmail.com",
-    "Email": "financialplanapp@gmail.com",
-    "Password": "pxep ywvx ncux klhd"
+    "Email": "",
+    "Password": ""
   },
   "AllowedHosts": "*",
   "JWT": {
